power: Lazily connect to gnome-screensaver

Do not D-BUS activate gnome-screensaver right at startup, this unnecessarily
slows down boot speed. Instead, D-BUS activate it the first time we actually
need it.

https://bugzilla.gnome.org/show_bug.cgi?id=667345